Finance changes and egov removed

--- a/egov/egov-egiweb/src/main/webapp/resources/global/templates/datatables.html
+++ b/egov/egov-egiweb/src/main/webapp/resources/global/templates/datatables.html
@@ -55,7 +55,7 @@
 		<meta name="description" content="Neon Admin Panel" />
 		<meta name="author" content="" />
 		
-		<title>eGov Urban Portal</title>
+		<title></title>
 		
 		<link rel="stylesheet" href="../css/bootstrap/bootstrap.css">
 		<link rel="stylesheet" href="../css/egov/custom.css">
@@ -102,9 +102,7 @@
 						<div class="nav-right-menu col-md-2 col-xs-2">
 							<ul class="hr-menu text-right">
 								<li class="ico-menu">
-									<a href="javascript:void(0);">
-										<img src="../images/logo@2x.png" title="Powered by eGovernments" height="20px">
-									</a>
+									
 								</li>
 								
 							</ul>
@@ -471,7 +469,7 @@
 			
 			<footer class="main">
 				
-				Powered by <a href="http://eGovernments.org" target="_blank">eGovernments Foundation</a>
+				
 				
 			</footer>
 			
