--- a/egov/egov-egfweb/src/main/webapp/resources/templates/openingbalance.html
+++ b/egov/egov-egfweb/src/main/webapp/resources/templates/openingbalance.html
@@ -56,7 +56,7 @@
 		<meta name="description" content="Neon Admin Panel" />
 		<meta name="author" content="" />
 		
-		<title>eGov Urban Portal</title>
+		<title></title>
 		
 		<link rel="stylesheet" href="../../../../../../egov-egiweb/src/main/webapp/resources/global/css/bootstrap/bootstrap.css">
 		<link rel="stylesheet" href="../../../../../../egov-egiweb/src/main/webapp/resources/global/css/font-icons/entypo/css/entypo.css">
@@ -98,9 +98,7 @@
 						<div class="nav-right-menu col-md-2 col-xs-2">
 							<ul class="hr-menu text-right">
 								<li class="ico-menu">
-									<a href="javascript:void(0);">
-										<img src="../../../../../../egov-egiweb/src/main/webapp/resources/global/images/logo@2x.png" title="Powered by eGovernments" height="20px">
-									</a>
+									
 								</li>
 								
 							</ul>
@@ -219,9 +217,7 @@
 			</div>
 			
 			<footer class="main">
-				
-				Powered by <a href="http://eGovernments.org" target="_blank">eGovernments Foundation</a>
-				
+								
 			</footer>
 			
 		</div>
