--- a/egov/egov-egfweb/src/main/webapp/WEB-INF/layout/tiles.xml
+++ b/egov/egov-egfweb/src/main/webapp/WEB-INF/layout/tiles.xml
@@ -829,5 +829,18 @@
         <put-attribute name="page-title" value="title.coa.report" cascade="true"/>
         <put-attribute name="body" value="/WEB-INF/views/cheque/surrender_cheque.jsp"/>
     </definition>
+    <definition name="approvebudget-searchCAO" extends="base_layout">
+        <put-attribute name="page-title" value="title.approvebudget.search.cao"
+                       cascade="true"/>
+        <put-attribute name="body"
+                       value="/WEB-INF/views/approvebudget/approvebudget-searchCAO.jsp"/>
+    </definition>
+    
+    <definition name="approvebudget-searchACMC" extends="base_layout">
+        <put-attribute name="page-title" value="title.approvebudget.search.acmc"
+                       cascade="true"/>
+        <put-attribute name="body"
+                       value="/WEB-INF/views/approvebudget/approvebudget-searchACMC.jsp"/>
+    </definition>   
     
 </tiles-definitions>
