--- a/egov/egov-egf/src/main/resources/reports/templates/bankAdviceReport.jrxml
+++ b/egov/egov-egf/src/main/resources/reports/templates/bankAdviceReport.jrxml
@@ -1,53 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-  ~    eGov  SmartCity eGovernance suite aims to improve the internal efficiency,transparency,
-  ~    accountability and the service delivery of the government  organizations.
-  ~
-  ~     Copyright (C) 2017  eGovernments Foundation
-  ~
-  ~     The updated version of eGov suite of products as by eGovernments Foundation
-  ~     is available at http://www.egovernments.org
-  ~
-  ~     This program is free software: you can redistribute it and/or modify
-  ~     it under the terms of the GNU General Public License as published by
-  ~     the Free Software Foundation, either version 3 of the License, or
-  ~     any later version.
-  ~
-  ~     This program is distributed in the hope that it will be useful,
-  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
-  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-  ~     GNU General Public License for more details.
-  ~
-  ~     You should have received a copy of the GNU General Public License
-  ~     along with this program. If not, see http://www.gnu.org/licenses/ or
-  ~     http://www.gnu.org/licenses/gpl.html .
-  ~
-  ~     In addition to the terms of the GPL license to be adhered to in using this
-  ~     program, the following additional terms are to be complied with:
-  ~
-  ~         1) All versions of this program, verbatim or modified must carry this
-  ~            Legal Notice.
-  ~            Further, all user interfaces, including but not limited to citizen facing interfaces,
-  ~            Urban Local Bodies interfaces, dashboards, mobile applications, of the program and any
-  ~            derived works should carry eGovernments Foundation logo on the top right corner.
-  ~
-  ~            For the logo, please refer http://egovernments.org/html/logo/egov_logo.png.
-  ~            For any further queries on attribution, including queries on brand guidelines,
-  ~            please contact contact@egovernments.org
-  ~
-  ~         2) Any misrepresentation of the origin of the material is prohibited. It
-  ~            is required that all modified versions of this material be marked in
-  ~            reasonable ways as different from the original version.
-  ~
-  ~         3) This license does not grant any rights to any user of the program
-  ~            with regards to rights under trademark law for use of the trade names
-  ~            or trademarks of eGovernments Foundation.
-  ~
-  ~   In case of any queries, you can reach eGovernments Foundation at contact@egovernments.org.
-  ~
-  -->
-<!-- Created with Jaspersoft Studio version 6.2.0.final using JasperReports Library version 6.2.0  -->
-<!-- 2016-08-25T11:04:19 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="bankAdviceReport" printOrder="Horizontal" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="752" leftMargin="72" rightMargin="18" topMargin="18" bottomMargin="18" isFloatColumnFooter="true" uuid="e977129d-8063-4dc8-acc3-8e8fecf2dd1e">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
@@ -59,6 +10,7 @@
 	<parameter name="chequeDate" class="java.lang.String"/>
 	<parameter name="letterContext" class="java.lang.String"/>
 	<parameter name="totalAmount" class="java.math.BigDecimal"/>
+	<parameter name="instrumentType" class="java.lang.String"/>
 	<queryString>
 		<![CDATA[]]>
 	</queryString>
@@ -96,12 +48,6 @@ The Manager,
 				<reportElement x="554" y="49" width="198" height="21" uuid="4ef74e37-30d1-4dc5-99fc-6749540dd79a"/>
 				<textFieldExpression><![CDATA[$P{branchName}]]></textFieldExpression>
 			</textField>
-			<staticText>
-				<reportElement x="0" y="154" width="752" height="31" uuid="9b690481-23e2-402d-8d1b-6005426435cb"/>
-				<text><![CDATA[Sir,
-            SUB:   Transfer of amount through RTGS - Requested – Regarding.
-]]></text>
-			</staticText>
 			<textField>
 				<reportElement x="0" y="127" width="435" height="27" uuid="9fd252ac-6668-437d-a6b7-d66ae1511cda"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
@@ -135,6 +81,16 @@ The Manager,
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<text><![CDATA[File No. : ]]></text>
 			</staticText>
+			<textField>
+				<reportElement x="0" y="154" width="25" height="14" uuid="485485da-0fc3-48e8-93f9-d680be2a4d0e"/>
+				<textFieldExpression><![CDATA["Sir,"
+
+]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="25" y="171" width="726" height="14" uuid="ffb4d490-8804-4d58-b91d-53855a199fd7"/>
+				<textFieldExpression><![CDATA[  "SUB:   Transfer of amount through "+$P{instrumentType}+" - Requested – Regarding."]]></textFieldExpression>
+			</textField>
 		</band>
 	</title>
 	<pageHeader>
