--- a/egov/egov-egfweb/src/main/webapp/resources/css/budget.css
+++ b/egov/egov-egfweb/src/main/webapp/resources/css/budget.css
@@ -52,7 +52,8 @@
 {
 	border-right-color: #CCCCCC;
     border-bottom-color: #CCCCCC;
-    background-color: #f2851f;
+    background-color: #265988;
+    color: #fff;
 }
 
 div.topbar {
