--- a/egov/egov-egfweb/src/main/webapp/resources/css/budget.css
+++ b/egov/egov-egfweb/src/main/webapp/resources/css/budget.css
@@ -621,7 +621,7 @@ th.bluebgheadtdnew {
 	text-align: center;
 	border-right-color: #CCCCCC;
     border-bottom-color: #CCCCCC;
-    background-color: #f2851f;
+    background-color: #265988;
 
 	}
 
