--- a/egov/egov-egfweb/src/main/webapp/resources/css/budget.css
+++ b/egov/egov-egfweb/src/main/webapp/resources/css/budget.css
@@ -117,7 +117,7 @@ td.bluebox {
 	padding-left: 5px;
 	color: #000000;
 	text-align: left;
-	vertical-align: top;
+	/*vertical-align: top;*/
 	}
 	
 	td.bluebox3 {
