--- a/egov/egov-egfweb/src/main/webapp/resources/css/commonegovnew.css
+++ b/egov/egov-egfweb/src/main/webapp/resources/css/commonegovnew.css
@@ -384,7 +384,7 @@ div.bottom {
 	}
 .modeofpayment
 {
-	background-color: #FFFCDF;
+	background-color: #265988;
 	border-bottom: 1px solid white;
 	border-top: 1px solid white;
 	font-size: 11px;
@@ -392,7 +392,7 @@ div.bottom {
 	padding-bottom: 3px;
 	padding-right: 5px;
 	padding-left: 5px;
-	color: #000000;
+	color: #ffffff;
 	text-align: left;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 }
