--- a/egov/egov-egiweb/src/main/webapp/resources/global/css/egov/custom.css
+++ b/egov/egov-egiweb/src/main/webapp/resources/global/css/egov/custom.css
@@ -216,7 +216,7 @@ label.error {
 }
 .mandatory1 {
   font-weight: normal;
-  color: #265988;
+  color: red;
 }
 /*LESS - Functions*/
 .oldbuttonsection div.buttonbottom {
@@ -230,7 +230,7 @@ label.error {
 }
 .oldbuttonsection input.buttonsubmit,
 .oldbuttonsection input.button {
-  /*width: auto;*/
+  width: 140px;
   font-family: semibold;
   text-align: center;
   border-style: none;
@@ -239,7 +239,7 @@ label.error {
   padding: 6px 12px;
   background: #fe7a51 none repeat scroll 0% 0%;
   color: #ffffff;
-  height: 30px;
+  height: 34px;
   border-radius: 3px;
   border: 1px solid #fe7a51;
   margin-right: 5px;
@@ -1258,7 +1258,6 @@ label.error {
 .page-container .main-content div.formmainbox td.greybox input.hiddentext {
   font-family: regular;
   font-size: 11px;
-  width: 200px;
   color: #333333;
   background-color: #ffffff;
   border: 1px solid #CCCCCC;
@@ -1417,7 +1416,7 @@ label.error {
 }
 .page-container .main-content div.formmainbox input.buttonsubmit,
 .page-container .main-content div.formmainbox input.button {
-  /*width: auto;*/
+  width: 140px;
   font-family: semibold;
   text-align: center;
   border-style: none;
@@ -1426,7 +1425,7 @@ label.error {
   padding: 6px 12px;
   background: #fe7a51 none repeat scroll 0% 0%;
   color: #ffffff;
-  height: 30px;
+  height: 34px;
   border-radius: 3px;
   border: 1px solid #fe7a51;
   margin-right: 5px;
@@ -1471,7 +1470,7 @@ label.error {
 }
 .page-container .main-content input.buttonsubmit,
 .page-container .main-content input.button {
-  /*width: auto;*/
+  width: 140px;
   font-family: semibold;
   text-align: center;
   border-style: none;
@@ -1480,7 +1479,7 @@ label.error {
   padding: 6px 12px;
   background: #fe7a51 none repeat scroll 0% 0%;
   color: #ffffff;
-  height: 30px;
+  height: 34px;
   border-radius: 3px;
   border: 1px solid #fe7a51;
   margin-right: 5px;
@@ -1569,7 +1568,7 @@ label.error {
 .page-container .main-content td.bluebox input[type="text"],
 .page-container .main-content td.bluebox select {
   width: 200px;
-  height: 30px;
+  height: 34px;
   padding: 5px 10px;
   font-size: 12px;
   line-height: 1.5;
@@ -1619,7 +1618,7 @@ label.error {
 .page-container .nav-tabs li.active > a:first-of-type:hover,
 .page-container .nav-tabs li.active > a:first-of-type:active {
   background: transparent;
-  color: #00bbd3;
+  color: #265988;
   cursor: default;
   border: 0;
 }
@@ -1671,14 +1670,16 @@ label.error {
   color: #ffffff;
   background-color: #fe7a51;
   border-color: #fe7a51;
-  width: 100px;
+  width: 140px;
+  height:34px;
 }
 
 .btn-primary {
   color: #ffffff;
   background-color: #fe7a51;
   border-color: #fe7a51;
-  width: 100px;
+  width: 140px;
+  height:34px;
 }
 .btn-primary:hover,
 .btn-primary:focus,
@@ -1720,7 +1721,8 @@ label.error {
   color: #ffffff;
   background-color: #fe7a51;
   border-color: #fe7a51;
-  width: 100px;
+  width: 140px;
+  height:34px;
 }
 .btn-danger {
   color: #ffffff !important;
