--- a/egov/egov-egiweb/src/main/webapp/resources/global/css/egov/custom.css
+++ b/egov/egov-egiweb/src/main/webapp/resources/global/css/egov/custom.css
@@ -2038,6 +2038,7 @@ footer.main a {
     border-width: 0 0 1px;
     background-color: white;
     width: 100%;
+    position: fixed;
 }
 .nav-tabs {
     border-bottom: 1px solid #ddd;
