--- a/egov/egov-egiweb/src/main/webapp/resources/global/css/egov/custom.css
+++ b/egov/egov-egiweb/src/main/webapp/resources/global/css/egov/custom.css
@@ -2036,7 +2036,7 @@ footer.main a {
 .navbar-fixed-top {
     top: 0;
     border-width: 0 0 1px;
-    background-color: white;
+    /*background-color: white;*/
     width: 100%;
     position: fixed;
 }
