--- a/egov/egov-egiweb/src/main/webapp/resources/global/css/egov/custom.css
+++ b/egov/egov-egiweb/src/main/webapp/resources/global/css/egov/custom.css
@@ -2040,6 +2040,14 @@ footer.main a {
     width: 100%;
     position: fixed;
 }
+
+.navbar-fixed-top-expense {
+    top: 0;
+    border-width: 0 0 1px;
+    background-color: white;
+    width: 100%;
+    position: fixed;
+}
 .nav-tabs {
     border-bottom: 1px solid #ddd;
     position: fixed;
