--- a/egov/egov-egiweb/src/main/webapp/resources/global/css/egov/custom.css
+++ b/egov/egov-egiweb/src/main/webapp/resources/global/css/egov/custom.css
@@ -2047,6 +2047,7 @@ footer.main a {
     background-color: white;
     width: 100%;
     position: fixed;
+    z-index: 9;
 }
 .nav-tabs {
     border-bottom: 1px solid #ddd;
