--- a/egov/egov-egiweb/src/main/webapp/resources/global/css/egov/custom.css
+++ b/egov/egov-egiweb/src/main/webapp/resources/global/css/egov/custom.css
@@ -1517,9 +1517,11 @@ label.error {
   background-image: none;
   text-align: center;
 }
-.page-container .main-content .yui-skin-sam .yui-dt th .yui-dt th a {
+.page-container .main-content .yui-skin-sam .yui-dt th, .yui-skin-sam .yui-dt th a {
   color: #ffffff;
   background: #265988;
+  vertical-align: middle;
+  font-weight: normal;
 }
 .page-container .main-content .yui-skin-sam .yui-dt td {
   border-right: 1px solid #E9E9E9;
