--- a/egov/egov-egf/src/main/resources/reports/templates/bankAdviceReport.jrxml
+++ b/egov/egov-egf/src/main/resources/reports/templates/bankAdviceReport.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="bankAdviceReport" printOrder="Horizontal" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="752" leftMargin="72" rightMargin="18" topMargin="18" bottomMargin="18" isFloatColumnFooter="true" uuid="e977129d-8063-4dc8-acc3-8e8fecf2dd1e">
-	<property name="ireport.zoom" value="1.0"/>
+	<property name="ireport.zoom" value="1.4641000000000006"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.y" value="97"/>
 	<parameter name="bankName" class="java.lang.String"/>
 	<parameter name="branchName" class="java.lang.String"/>
 	<parameter name="accountNumber" class="java.lang.String"/>
@@ -20,19 +20,9 @@
 	<field name="ifscCode" class="java.lang.String"/>
 	<field name="bank" class="java.lang.String"/>
 	<title>
-		<band height="244" splitType="Stretch">
+		<band height="275" splitType="Stretch">
 			<staticText>
-				<reportElement x="0" y="0" width="476" height="91" uuid="55231097-300b-4426-963a-1fe9b036b03b"/>
-				<textElement>
-					<font size="11"/>
-				</textElement>
-				<text><![CDATA[From
-
-
-]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="554" y="0" width="198" height="32" uuid="5fadac95-5bd1-4189-9b19-b241adf70f50"/>
+				<reportElement x="0" y="39" width="198" height="32" uuid="5fadac95-5bd1-4189-9b19-b241adf70f50"/>
 				<textElement>
 					<font size="11"/>
 				</textElement>
@@ -41,56 +31,61 @@ The Manager,
 ]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="554" y="32" width="198" height="17" uuid="284bd69b-eb27-4460-bfa3-8ac393d8f3d5"/>
+				<reportElement x="0" y="71" width="198" height="17" uuid="284bd69b-eb27-4460-bfa3-8ac393d8f3d5"/>
 				<textFieldExpression><![CDATA[$P{bankName}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="554" y="49" width="198" height="21" uuid="4ef74e37-30d1-4dc5-99fc-6749540dd79a"/>
+				<reportElement x="0" y="88" width="198" height="21" uuid="4ef74e37-30d1-4dc5-99fc-6749540dd79a"/>
 				<textFieldExpression><![CDATA[$P{branchName}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="0" y="127" width="435" height="27" uuid="9fd252ac-6668-437d-a6b7-d66ae1511cda"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<reportElement x="37" y="155" width="363" height="27" uuid="9fd252ac-6668-437d-a6b7-d66ae1511cda"/>
+				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{chequeNumber}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="520" y="127" width="85" height="27" uuid="823ad213-e4cb-4661-b404-bc18dcdec7a8"/>
+				<reportElement x="520" y="157" width="85" height="27" uuid="823ad213-e4cb-4661-b404-bc18dcdec7a8"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<text><![CDATA[Dated:]]></text>
 			</staticText>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement stretchType="RelativeToTallestObject" x="0" y="185" width="752" height="41" uuid="c6427eb5-71f3-426b-bfc4-65ad65c9e907"/>
+				<reportElement stretchType="RelativeToTallestObject" x="0" y="215" width="752" height="41" uuid="c6427eb5-71f3-426b-bfc4-65ad65c9e907"/>
 				<textElement textAlignment="Justified" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{letterContext}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="605" y="127" width="146" height="27" uuid="881a8b92-90ec-41ff-af26-e3b687f15015"/>
+				<reportElement x="605" y="157" width="146" height="27" uuid="881a8b92-90ec-41ff-af26-e3b687f15015"/>
 				<box leftPadding="2"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{chequeDate}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="0" y="226" width="751" height="18" uuid="4c9e5cfa-4daa-4e18-98d6-a02b6ee2f804"/>
+				<reportElement x="0" y="256" width="751" height="18" uuid="4c9e5cfa-4daa-4e18-98d6-a02b6ee2f804"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font pdfFontName="Helvetica-Bold"/>
 				</textElement>
 				<text><![CDATA[*****]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="0" y="91" width="751" height="36" uuid="7dd4f65b-e4be-4bb1-9797-4d7af1500512"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<text><![CDATA[File No. : ]]></text>
+				<reportElement x="37" y="134" width="363" height="21" uuid="7dd4f65b-e4be-4bb1-9797-4d7af1500512"/>
+				<textElement textAlignment="Left" verticalAlignment="Middle"/>
+				<text><![CDATA[Memo No. : ]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="0" y="154" width="25" height="14" uuid="485485da-0fc3-48e8-93f9-d680be2a4d0e"/>
-				<textFieldExpression><![CDATA["Sir,"
-
-]]></textFieldExpression>
+				<reportElement x="0" y="184" width="25" height="14" uuid="485485da-0fc3-48e8-93f9-d680be2a4d0e"/>
+				<textFieldExpression><![CDATA["Sir,"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="25" y="171" width="726" height="14" uuid="ffb4d490-8804-4d58-b91d-53855a199fd7"/>
-				<textFieldExpression><![CDATA[  "SUB:   Transfer of amount through "+$P{instrumentType}+" - Requested – Regarding."]]></textFieldExpression>
+				<reportElement x="25" y="201" width="726" height="14" uuid="ffb4d490-8804-4d58-b91d-53855a199fd7"/>
+				<textFieldExpression><![CDATA["SUB:   Transfer of amount through "+$P{instrumentType}+" - Requested – Regarding."]]></textFieldExpression>
 			</textField>
+			<staticText>
+				<reportElement x="1" y="11" width="751" height="20" uuid="9d65f83b-8dd5-4399-b9d0-0e6185a1a499"/>
+				<textElement textAlignment="Center">
+					<font fontName="Times New Roman" size="12" isBold="true" isUnderline="true" pdfFontName="Times-Bold"/>
+				</textElement>
+				<text><![CDATA[MUNICIPAL CORPORATION OF CHANDIGARH]]></text>
+			</staticText>
 		</band>
 	</title>
 	<pageHeader>
@@ -313,13 +308,15 @@ The Manager,
 		</band>
 	</pageFooter>
 	<summary>
-		<band height="118">
+		<band height="422">
 			<staticText>
-				<reportElement x="605" y="103" width="146" height="15" uuid="d6a1fe81-653c-46ff-8d0d-90450d03721e"/>
-				<textElement textAlignment="Right" verticalAlignment="Bottom">
+				<reportElement x="605" y="81" width="146" height="59" uuid="d6a1fe81-653c-46ff-8d0d-90450d03721e"/>
+				<textElement textAlignment="Left" verticalAlignment="Bottom">
 					<font isBold="false" isStrikeThrough="false" pdfFontName="Helvetica-Bold" isPdfEmbedded="true"/>
 				</textElement>
-				<text><![CDATA[For Financial Adviser]]></text>
+				<text><![CDATA[Additional Commissioner,
+Municipal Corporation,
+Chandigarh]]></text>
 			</staticText>
 			<staticText>
 				<reportElement positionType="Float" x="0" y="2" width="532" height="24" uuid="6119aaa1-1b13-4395-aded-99cbbe990fa5"/>
@@ -347,6 +344,24 @@ The Manager,
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{totalAmount}]]></textFieldExpression>
 			</textField>
+			<staticText>
+				<reportElement x="1" y="81" width="146" height="59" uuid="69bda2cd-b4c9-4178-975a-4200f9f67358"/>
+				<textElement textAlignment="Left" verticalAlignment="Bottom">
+					<font isBold="false" isStrikeThrough="false" pdfFontName="Helvetica-Bold" isPdfEmbedded="true"/>
+				</textElement>
+				<text><![CDATA[Chief Accounts Officer,
+Municipal Corporation,
+Chandigarh]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="606" y="337" width="146" height="59" uuid="8db28e4f-3cfb-465e-8f94-772d5887185a"/>
+				<textElement textAlignment="Left" verticalAlignment="Bottom">
+					<font isBold="false" isStrikeThrough="false" pdfFontName="Helvetica-Bold" isPdfEmbedded="true"/>
+				</textElement>
+				<text><![CDATA[Chief Accounts Officer,
+Municipal Corporation,
+Chandigarh]]></text>
+			</staticText>
 		</band>
 	</summary>
 </jasperReport>
