--- a/egov/egov-egfweb/src/main/webapp/resources/css/budget.css
+++ b/egov/egov-egfweb/src/main/webapp/resources/css/budget.css
@@ -210,7 +210,7 @@ th.bluebgheadtd {
 	text-align: center;
 	border-right-color: #CCCCCC;
     border-bottom-color: #CCCCCC;
-    background-color: #f2851f;
+    background-color: #265988;
 	}
 td.bluebgheadtd {
 	height: 32px;
@@ -228,7 +228,7 @@ td.bluebgheadtd {
 	text-align: center;
 	border-right-color: #CCCCCC;
     border-bottom-color: #CCCCCC;
-    background-color: #f2851f;
+    background-color: #265988;
 	}
 	
 td.totalbg {
