--- a/egov/egov-collection/src/main/resources/reports/templates/collection_receipt_challan_single.jrxml
+++ b/egov/egov-collection/src/main/resources/reports/templates/collection_receipt_challan_single.jrxml
@@ -22,7 +22,7 @@
 	<field name="receiptDate" class="java.util.Date"/>
 	<field name="paidBy" class="java.lang.String"/>
 	<field name="challan" class="org.egov.collection.entity.ChallanInfo"/>
-	<field name="createdBy" class="org.egov.infra.admin.master.entity.User">
+	<field name="createdUser" class="java.lang.String">
 		<fieldDescription><![CDATA[Created By]]></fieldDescription>
 	</field>
 	<group name="Receipt" isStartNewPage="true"/>
@@ -166,7 +166,7 @@
 				<textElement textAlignment="Left" verticalAlignment="Middle">
 					<font fontName="SansSerif" size="10" pdfFontName="Times-Roman" isPdfEmbedded="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{createdBy}.getName()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{createdUser}]]></textFieldExpression>
 			</textField>
 			<staticText>
 				<reportElement stretchType="RelativeToTallestObject" x="0" y="0" width="100" height="20" uuid="0ebd8cab-29d7-480a-ac3e-fed1c9a43303"/>
