changes in LCMS and apnimandi

--- a/egov/egov-lcmsweb/src/main/webapp/resources/templates/createcase.html
+++ b/egov/egov-lcmsweb/src/main/webapp/resources/templates/createcase.html
@@ -140,7 +140,7 @@
                                             <div class="col-sm-3 add-margin">
                                                 <Select class="form-control" id="applicantname" > <option>select from below</option></Select>
                                             </div>	
-                                            <label class="col-sm-2 control-label text-right">Case Category<span class="mandatory"></span></label>
+                                            <label class="col-sm-2 control-label text-right">Case Type<span class="mandatory"></span></label>
                                             <div class="col-sm-3 add-margin">
                                                 <Select class="form-control" id="applicantname" > <option>select from below</option></Select>
                                             </div>
