--- a/egov/egov-lcmsweb/src/main/webapp/resources/templates/searchcase.html
+++ b/egov/egov-lcmsweb/src/main/webapp/resources/templates/searchcase.html
@@ -124,7 +124,7 @@
                                             </div>
                                         </div>
 										<div class="form-group">
-                                            <label class="col-sm-3 control-label text-right">Case Category</label>
+                                            <label class="col-sm-3 control-label text-right">Case Type</label>
                                             <div class="col-sm-3 add-margin">
                                                 <Select class="form-control" id="applicantname" > <option>select from below</option></Select>
                                             </div>
