--- a/egov/egov-lcmsweb/src/main/webapp/resources/templates/viewcase.html
+++ b/egov/egov-lcmsweb/src/main/webapp/resources/templates/viewcase.html
@@ -135,7 +135,7 @@
 												LC@/45675
 											</div>
 	                                        <div class="col-xs-3 add-margin">
-												Case Category
+												Case Type
 											</div>
 											<div class="col-xs-3 add-margin view-content">
 												Bus Shelter
