--- a/egov/egov-egiweb/src/main/webapp/resources/global/css/egov/custom.css
+++ b/egov/egov-egiweb/src/main/webapp/resources/global/css/egov/custom.css
@@ -1265,6 +1265,7 @@ label.error {
   padding-right: 2px;
   padding-bottom: 2px;
   padding-left: 4px;
+  height:34px;
 }
 .page-container .main-content div.formmainbox input.tablerow {
   width: 95%;
@@ -1516,9 +1517,11 @@ label.error {
   background-image: none;
   text-align: center;
 }
-.page-container .main-content .yui-skin-sam .yui-dt th {
+.page-container .main-content .yui-skin-sam .yui-dt th, .yui-skin-sam .yui-dt th a {
   color: #ffffff;
   background: #265988;
+  vertical-align: middle;
+  font-weight: normal;
 }
 .page-container .main-content .yui-skin-sam .yui-dt td {
   border-right: 1px solid #E9E9E9;
@@ -1671,6 +1674,14 @@ label.error {
   background-color: #fe7a51;
   border-color: #fe7a51;
   width: 140px;
+  height:34px;
+}
+
+.btn-default-master {
+  color: #ffffff;
+  background-color: #fe7a51;
+  border-color: #fe7a51;
+  width: auto;
   height:34px;
 }
 
@@ -2036,8 +2047,18 @@ footer.main a {
 .navbar-fixed-top {
     top: 0;
     border-width: 0 0 1px;
+    /*background-color: white;*/
+    width: 100%;
+    position: fixed;
+}
+
+.navbar-fixed-top-expense {
+    top: 0;
+    border-width: 0 0 1px;
     background-color: white;
     width: 100%;
+    position: fixed;
+    z-index: 9;
 }
 .nav-tabs {
     border-bottom: 1px solid #ddd;
@@ -2080,7 +2101,7 @@ footer.main a {
 }
 
 .tab-content {
-    margin-top: 100px;
+    margin-top:30px;
     position: absolute;
     width: 95%;
     
