--- a/egov/egov-council/src/main/resources/reports/templates/agendaDetails.jrxml
+++ b/egov/egov-council/src/main/resources/reports/templates/agendaDetails.jrxml
@@ -9,17 +9,17 @@
 	<columnHeader>
 		<band height="73">
 			<staticText>
-				<reportElement mode="Opaque" x="0" y="38" width="49" height="35" uuid="ed74b3f8-57e4-4eb1-bd22-e3644e3a0f5f"/>
+				<reportElement mode="Opaque" x="0" y="38" width="40" height="35" uuid="ed74b3f8-57e4-4eb1-bd22-e3644e3a0f5f"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<text><![CDATA[Item Number]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="49" y="38" width="121" height="35" uuid="9fd049ac-e9ae-48cc-8851-58fbe82a3092"/>
+				<reportElement mode="Opaque" x="41" y="38" width="90" height="35" uuid="9fd049ac-e9ae-48cc-8851-58fbe82a3092"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<text><![CDATA[Department]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="171" y="38" width="292" height="35" uuid="42aeb3e6-139d-473c-965f-1a1ae7ebc002"/>
+				<reportElement mode="Opaque" x="131" y="38" width="349" height="35" uuid="42aeb3e6-139d-473c-965f-1a1ae7ebc002"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<text><![CDATA[Details of Agenda]]></text>
 			</staticText>
@@ -35,7 +35,7 @@
 	<detail>
 		<band height="44" splitType="Stretch">
 			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
-				<reportElement stretchType="RelativeToBandHeight" mode="Opaque" x="0" y="1" width="49" height="43" isPrintWhenDetailOverflows="true" uuid="e4085165-ecc1-4cab-8dc5-5634c80f30da">
+				<reportElement stretchType="RelativeToBandHeight" mode="Opaque" x="0" y="1" width="30" height="43" isPrintWhenDetailOverflows="true" uuid="e4085165-ecc1-4cab-8dc5-5634c80f30da">
 					<property name="net.sf.jasperreports.export.pdf.tag.h1" value="full"/>
 				</reportElement>
 				<box leftPadding="0">
@@ -51,7 +51,7 @@
 				<textFieldExpression><![CDATA[$F{itemNumber}]]></textFieldExpression>
 			</textField>
 			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
-				<reportElement stretchType="RelativeToBandHeight" mode="Transparent" x="49" y="1" width="122" height="43" isPrintWhenDetailOverflows="true" uuid="e4b859bf-a6a0-42c8-9885-8609bfe20215"/>
+				<reportElement stretchType="RelativeToBandHeight" mode="Transparent" x="31" y="1" width="99" height="43" isPrintWhenDetailOverflows="true" uuid="e4b859bf-a6a0-42c8-9885-8609bfe20215"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -63,7 +63,7 @@
 				<textFieldExpression><![CDATA[$F{preamble}.getDepartmentName()]]></textFieldExpression>
 			</textField>
 			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
-				<reportElement stretchType="RelativeToBandHeight" mode="Transparent" x="170" y="1" width="293" height="43" isPrintWhenDetailOverflows="true" uuid="35207553-d99e-457f-bf8f-9c9ba38ddbaa"/>
+				<reportElement stretchType="RelativeToBandHeight" mode="Transparent" x="129" y="1" width="391" height="43" isPrintWhenDetailOverflows="true" uuid="35207553-d99e-457f-bf8f-9c9ba38ddbaa"/>
 				<box leftPadding="5">
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -71,7 +71,7 @@
 					<bottomPen lineWidth="0.5"/>
 					<rightPen lineWidth="0.5"/>
 				</box>
-				<textElement textAlignment="Left" verticalAlignment="Middle"/>
+				<textElement textAlignment="Left" verticalAlignment="Middle" markup="html"/>
 				<textFieldExpression><![CDATA[$F{preamble}.getGistOfPreamble()]]></textFieldExpression>
 			</textField>
 		</band>
