--- a/egov/egov-auditweb/src/main/webapp/WEB-INF/layout/tiles.xml
+++ b/egov/egov-auditweb/src/main/webapp/WEB-INF/layout/tiles.xml
@@ -38,6 +38,15 @@
 		<put-attribute name="body"
 			value="/WEB-INF/views/audit/audit-success.jsp" />
 	</definition>
+	<definition name="history" extends="base_layout">
+
+		<put-attribute name="page-title" value="Audit"
+			cascade="true" />
+
+		<put-attribute name="body"
+			value="/WEB-INF/views/audit/audit-checklist-popup.jsp" />
+
+	</definition>
 
 
 
