--- a/egov/egov-auditweb/src/main/webapp/WEB-INF/layout/tiles.xml
+++ b/egov/egov-auditweb/src/main/webapp/WEB-INF/layout/tiles.xml
@@ -56,7 +56,15 @@
 			value="/WEB-INF/views/audit/postAuditSearch.jsp" />
 
 	</definition>
+	<definition name="auditSearch" extends="base_layout">
 
+		<put-attribute name="page-title" value="Audit"
+			cascade="true" />
+
+		<put-attribute name="body"
+			value="/WEB-INF/views/audit/auditSearch.jsp" />
+
+	</definition>
 
 
 
